--- a/frontend/src/container/menuContainer.css
+++ b/frontend/src/container/menuContainer.css
@@ -20,8 +20,9 @@ border:1px solid black;
     width: 80%;
     height:80%;
     display: flex;  
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     border:1px solid black;
+    overflow-y: scroll;
     
 }
 
