--- a/frontend/src/component/MenuStat/MenuStat.module.css
+++ b/frontend/src/component/MenuStat/MenuStat.module.css
@@ -1,3 +1,7 @@
+.title {
+    border: 3px solid black;
+}
+
 .aboutDate {
     height: 5em;
     position: relative;
@@ -16,5 +20,10 @@
     position: absolute;
     top: 30%;
     left: 50%;
+    border: 3px solid black;
+}
+
+.content {
+    text-align: center;
     border: 3px solid black;
 }
