전체 통계 / 옵션 통계 완성

--- a/frontend/src/component/OptionStat/OptionStat.module.css
+++ b/frontend/src/component/OptionStat/OptionStat.module.css
@@ -24,6 +24,14 @@
 }
 
 .content {
-    text-align: center;
+    text-align: left;
+    font-size: 0.4em;
     border: 3px solid black;
+}
+.optionSellingPrice {
+    margin-left: 1em;
+}
+
+.optionSales {
+    margin-left: 3em;
 }
