통계 페이지 완성

--- a/frontend/src/component/MenuStat/MenuStat.module.css
+++ b/frontend/src/component/MenuStat/MenuStat.module.css
@@ -24,6 +24,15 @@
 }
 
 .content {
-    text-align: center;
+    text-align: left;
     border: 3px solid black;
 }
+
+.category {
+    font-size: 1em;
+}
+
+.main {
+    font-size: 0.5em;
+}
+
