--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  font-family: 'Do Hyeon', sans-serif;
+  font-weight: lighter;
 }
 :root {
   --primaryColor: #af9a7d;
