--- a/frontend/src/component/MenuAdmin/MenuAdmin.module.css
+++ b/frontend/src/component/MenuAdmin/MenuAdmin.module.css
@@ -183,6 +183,11 @@ button:hover {
     margin-left: 5%;
 }
 
+.option .delBtn {
+    color: red;
+    font-size: 1.5em;
+}
+
 .optionName, .optionPrice {
     font-size: 1.5em;
 }
