--- a/frontend/src/component/AdminMain/AdminMain.module.css
+++ b/frontend/src/component/AdminMain/AdminMain.module.css
@@ -45,7 +45,9 @@
     text-align: center;
     position: absolute;
     top: 30%;
-    left: 55%;
+    left: 50%;
+    float: left;
+    width : 500px;
 }
 
 span {
@@ -61,7 +63,19 @@ span {
     text-align : center;
     color : skyblue;
     font-family: 'Do Hyeon', sans-serif;
+    width : 200px;
+    display: inline;
     
+}
+.endDate{
+    border-radius : 15px;
+    border : 2px solid skyblue;
+    outline : none;
+    text-align : center;
+    color : skyblue;
+    font-family: 'Do Hyeon', sans-serif;
+    width : 200px;
+    display : inline;
 }
 
 input[type=date] {
@@ -70,23 +84,17 @@ input[type=date] {
     font-size : 17px;
 }
 
-.endDate{
-    border-radius : 15px;
-    border : 2px solid skyblue;
-    outline : none;
-    text-align : center;
-    color : skyblue;
-    font-family: 'Do Hyeon', sans-serif;
-}
+
 
 .text{
     margin: 120px 0;
     text-align : center;
+    display : block;
 
 }
 
 .text p{
     font-weight: bolder;
     font-size: 62px;
-    display:block;
+    display: block !important;
 }
