--- a/frontend/src/component/MenuStat/MenuStat.module.css
+++ b/frontend/src/component/MenuStat/MenuStat.module.css
@@ -17,6 +17,7 @@
 
 .category {
     font-size: 1em;
+    margin-left : 250px;
 }
 
 .dateFilterBtn:focus{
@@ -27,7 +28,7 @@
 
 .main {
     font-size: 0.5em;
-    margin-left : 300px;
+    margin-left : 50px;
 }
 .main p{
     display: inline-block;
@@ -75,12 +76,15 @@
     text-align: center;
     position: absolute;
     top: 30%;
-    left: 55%;
+    left: 50%;
+    float: left;
+    width : 500px;
 }
 
-.main span{
-    color: black;
-    font-size: 24px;
+span {
+    margin : 0 15px;
+    font-weight : bolder;
+    color : skyblue;
 }
 
 .startDate {
@@ -90,15 +94,10 @@
     text-align : center;
     color : skyblue;
     font-family: 'Do Hyeon', sans-serif;
+    width : 200px;
+    display: inline;
     
 }
-
-input[type=date] {
-    font-weight : bolder;
-    font-family: 'Do Hyeon', sans-serif;
-    font-size : 17px;
-}
-
 .endDate{
     border-radius : 15px;
     border : 2px solid skyblue;
@@ -106,11 +105,19 @@ input[type=date] {
     text-align : center;
     color : skyblue;
     font-family: 'Do Hyeon', sans-serif;
+    width : 200px;
+    display : inline;
+}
+
+
+input[type=date] {
+    font-weight : bolder;
+    font-family: 'Do Hyeon', sans-serif;
+    font-size : 17px;
 }
 
 .categoryName{
     font-size : 38px;
-    margin-left : 250px;
     margin-top : 20px;
     margin-bottom : 10px;
 
